<resources>
    <string name="app_name">Weather Forecast</string>
    <string name="initial_setup">Initial SetUp</string>
    <string name="location">Location</string>
    <string name="gps">GPS</string>
    <string name="map">MAP</string>
    <string name="notification">Notification</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="alert">Alert</string>
    <string name="settings">Settings</string>
    <string name="day_forecast">Day ForeCast</string>
    <string name="_7_days_forecast">7-Days ForeCast</string>
    <string name="submit">Submit</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="metre_sec">metre/sec</string>
    <string name="miles_hour">miles/hour</string>
    <string name="units">Units</string>
    <string name="kelvin">Kelvin</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="apply_changed">Apply Changes</string>
    <string name="retry">Retry</string>
    <string name="are_you_sure">Are You Sure ?</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="your_chosen_location">"Your Chosen Location "</string>
    <string name="k">°K</string>
    <string name="f">°F</string>
    <string name="c">°C</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wen">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="alerts">Alerts</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="alarm">Alarm</string>
    <string name="Add_new_alarm">Add New Alarm</string>
    <string name="chose_your_start_and_end_time">chose your start and end time</string>
    <string name="select_date">Select date</string>
    <string name="select_time">Select time</string>
    <string name="channelName">alert</string>
</resources>