<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_grav"
    app:startDestination="@id/home">

    <fragment
        android:id="@+id/home"
        android:name="com.kh.mo.weatherforecast.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/alert"
        android:name="com.kh.mo.weatherforecast.ui.alert.AlertFragment"
        android:label="@string/alert"
        tools:layout="@layout/fragment_alert" />
    <fragment
        android:id="@+id/favourite"
        android:name="com.kh.mo.weatherforecast.ui.favorites.FavouriteFragment"
        android:label="@string/favourite"
        tools:layout="@layout/fragment_favourite"
        />
    <fragment
        android:id="@+id/settings"
        android:name="com.kh.mo.weatherforecast.ui.setting.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
</navigation>