<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="@dimen/padding_16"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/dialog_title_system"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/initial_setup"
        style="@style/sub_title"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginStart="@dimen/margin_16"
        android:drawablePadding="@dimen/padding_8"
        app:drawableStartCompat="@drawable/settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/location_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        style="@style/title"
        android:layout_marginVertical="@dimen/margin_32"
        android:layout_marginHorizontal="@dimen/margin_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_title_system" />

    <RadioGroup

        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/location_text"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/location_text">

        <RadioButton
            android:id="@+id/gps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/small_title"
            android:checked="true"
            android:text="@string/map" />

        <RadioButton
            android:id="@+id/map"
            style="@style/small_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gps" />

    </RadioGroup>

    <TextView
        android:id="@+id/notification_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_16"
        android:text="@string/notification"
        style="@style/title"

        android:layout_marginHorizontal="@dimen/margin_16"
        app:layout_constraintBottom_toBottomOf="@+id/materialSwitch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/materialSwitch" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/materialSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:layout_marginHorizontal="@dimen/margin_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>


