<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.setting.SettingsFragment">
        <TextView
            android:id="@+id/tile_of_setting"
            style="@style/TextAppearance.Material3.HeadlineLarge"
            android:layout_width="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_16"
            android:text="@string/settings"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".5" />

        <androidx.cardview.widget.CardView
            android:id="@+id/notification_card"
            android:layout_width="0dp"
            android:layout_height="0dp"

            app:layout_constraintTop_toBottomOf="@id/tile_of_setting"
            app:layout_constraintEnd_toStartOf="@+id/guideline1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/wind_speed_card"
            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:padding="@dimen/margin_16"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/notification_title"
                    android:layout_width="0dp"
                    android:clickable="false"

                    android:layout_height="wrap_content"
                    android:text="@string/notification"
                    app:layout_constraintBottom_toTopOf="@+id/radioGroup_notification"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <RadioGroup
                    android:id="@+id/radioGroup_notification"
                    android:layout_width="0dp"
                    android:weightSum="2"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/notification_title">
                    <RadioButton
                        android:id="@+id/notification_enable"
                        style="@style/small_title"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/enable" />
                    <RadioButton
                        android:id="@+id/notification_disable"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        style="@style/small_title"
                        android:text="@string/disable" />



                </RadioGroup>
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/language_card"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/tile_of_setting"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/guideline1"
            app:layout_constraintBottom_toTopOf="@+id/location_card"
            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:padding="@dimen/margin_16"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/language_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/language"
                    android:clickable="false"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/radioGroup_language"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <RadioGroup
                    android:id="@+id/radioGroup_language"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:orientation="vertical"
                    android:weightSum="2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/language_title">
                    <RadioButton
                        style="@style/small_title"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:id="@+id/language_arabic"
                        android:text="@string/arabic" />
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:id="@+id/language_english"
                        android:text="@string/english"
                        style="@style/small_title" />



                </RadioGroup>
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/location_card"
            android:layout_width="0dp"

            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/language_card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/guideline1"
            app:layout_constraintBottom_toTopOf="@id/guideline2"
            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:padding="@dimen/margin_16"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/location_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    android:clickable="false"

                    app:layout_constraintBottom_toTopOf="@id/radioGroup_location"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <RadioGroup
                    android:id="@+id/radioGroup_location"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:weightSum="2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/location_title">
                    <RadioButton
                        style="@style/small_title"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:id="@+id/location_gps"
                        android:layout_weight="1"
                        android:text="@string/gps" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        style="@style/small_title"
                        android:id="@+id/location_map"

                        android:text="@string/map" />



                </RadioGroup>
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>




        <androidx.cardview.widget.CardView
            android:id="@+id/wind_speed_card"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/notification_card"
            app:layout_constraintEnd_toStartOf="@+id/guideline1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/guideline2"
            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:padding="@dimen/margin_16"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/wind_speed_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/wind_speed"
                    android:clickable="false"

                    app:layout_constraintBottom_toTopOf="@id/radioGroup_wind_speed"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <RadioGroup
                    android:id="@+id/radioGroup_wind_speed"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:orientation="vertical"
                    android:weightSum="2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/wind_speed_title">
                    <RadioButton
                        android:id="@+id/wind_speed_miles"
                        style="@style/small_title"
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:layout_height="@dimen/height_0"
                        android:text="@string/miles_hour"
                  />
                    <RadioButton
                        android:id="@+id/wind_speed_metre"
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:layout_height="@dimen/height_0"
                        style="@style/small_title"
                        android:text="@string/metre_sec"
                     />

                </RadioGroup>
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".6" />

        <androidx.cardview.widget.CardView
            android:id="@+id/units_card"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"

            >
<!--            app:layout_constraintBottom_toTopOf="@+id/apply_changed"-->

            <androidx.constraintlayout.widget.ConstraintLayout

                android:layout_width="match_parent"
                android:padding="@dimen/margin_16"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/units_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:text="@string/units"
                    app:layout_constraintBottom_toTopOf="@+id/radioGroup_units"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <RadioGroup
                    android:id="@+id/radioGroup_units"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    android:weightSum="3"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/units_title">
                    <RadioButton
                        style="@style/small_title"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:id="@+id/units_kelvin"

                        android:text="@string/kelvin"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:id="@+id/units_celsius"
                        android:text="@string/celsius"
                        style="@style/small_title"
                       />
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:id="@+id/units_fahrenheit"
                        style="@style/small_title"
                        android:text="@string/fahrenheit"/>
                </RadioGroup>
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>